@@ -84,14 +84,14 @@ public class DWRFormService {
 	}
 	
 	public Field getField(Integer fieldId) {
-		Field f = new Field();
+		Field f;
 		FormService fs = Context.getFormService();
 		f = fs.getField(fieldId);
 		return f;
 	}
 	
 	public FormFieldListItem getFormField(Integer formFieldId) {
-		FormField f = new FormField();
+		FormField f;
 		FormService fs = Context.getFormService();
 		f = fs.getFormField(formFieldId);
 		return new FormFieldListItem(f, Context.getLocale());
@@ -222,19 +222,19 @@ public class DWRFormService {
 		
 		if (field == null) {
 			log.error("Field is null. Field Id: " + fieldId);
+		} else {
+			field.setName(name);
+			field.setDescription(fieldDesc);
+			field.setFieldType(fs.getFieldType(fieldTypeId));
+			if (conceptId != null && conceptId != 0)
+				field.setConcept(cs.getConcept(conceptId));
+			else
+				field.setConcept(null);
+			field.setTableName(table);
+			field.setAttributeName(attr);
+			field.setDefaultValue(defaultValue);
+			field.setSelectMultiple(multiple);
 		}
-		
-		field.setName(name);
-		field.setDescription(fieldDesc);
-		field.setFieldType(fs.getFieldType(fieldTypeId));
-		if (conceptId != null && conceptId != 0)
-			field.setConcept(cs.getConcept(conceptId));
-		else
-			field.setConcept(null);
-		field.setTableName(table);
-		field.setAttributeName(attr);
-		field.setDefaultValue(defaultValue);
-		field.setSelectMultiple(multiple);
 		
 		ff.setField(field);
 		fs.saveFormField(ff);
@@ -255,19 +255,19 @@ public class DWRFormService {
 	}
 	
 	private String generateJSTree(TreeMap<Integer, TreeSet<FormField>> formFields, Integer current, Locale locale) {
-		String s = "";
+		StringBuilder s = new StringBuilder("");
 		
 		if (formFields.containsKey(current)) {
 			TreeSet<FormField> set = formFields.get(current);
 			for (FormField ff : set) {
-				s += generateFormFieldJavascript(ff, locale);
+				s.append(generateFormFieldJavascript(ff, locale));
 				if (formFields.containsKey(ff.getFormFieldId())) {
-					s += generateJSTree(formFields, ff.getFormFieldId(), locale);
+					s.append(generateJSTree(formFields, ff.getFormFieldId(), locale));
 				}
 			}
 		}
 		
-		return s;
+		return s.toString();
 	}
 	
 	private String generateFormFieldJavascript(FormField ff, Locale locale) {
@@ -342,7 +342,7 @@ public class DWRFormService {
 				ConceptListItem c2 = (ConceptListItem) o2;
 				int length1 = c1.getName().length();
 				int length2 = c2.getName().length();
-				return new Integer(length1).compareTo(new Integer(length2));
+				return Integer.valueOf(length1).compareTo(Integer.valueOf(length2));
 			} else
 				return 0;
 		}
